--- a/src/main/resources/templates/admin/adminAds.html
+++ b/src/main/resources/templates/admin/adminAds.html
@@ -15,13 +15,20 @@
         .pb40 {
             padding-top: 20px;
         }
+        .v100{
+            height: 100vh;
+        }
+        .navbar-nav{flex-direction: row;}
+        .navbar-nav.header .nav-link{display: inline-block; margin-left:5px;}
     </style>
 </head>
 <body>
 <nav class="navbar navbar-dark bg-dark shadow">
     <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="/home"><span th:text="#{message.admin.menu}"/> </a>
-    <ul class="navbar-nav px-3">
-        <li class="nav-item text-nowrap">
+    <ul class="navbar-nav header px-3">
+        <li class="nav-item text-nowrap ">
+            <a class="nav-link" href="?Language=en">English</a>
+            <a class="nav-link" href="?Language=mn">Монгол</a>
             <a class="nav-link" href="#"><span th:text="#{message.admin.signed}"/> </a>
         </li>
     </ul>
@@ -29,7 +36,7 @@
 
 <div class="container-fluid">
     <div class="row">
-        <nav class="col-md-2 d-none d-md-block bg-light sidebar">
+        <nav class="col-md-2 d-none d-md-block bg-light sidebar v100">
             <div class="sidebar-sticky">
                 <ul class="nav flex-column">
                     <li class="nav-item">
@@ -71,6 +78,18 @@
                             </svg>  <span th:text="#{message.admin.ads}"/>
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/logout">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                 fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                 stroke-linejoin="round" class="feather feather-activity">
+                                <path d="M10 22H5a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h5"></path>
+                                <polyline points="17 16 21 12 17 8"></polyline>
+                                <line x1="21" y1="12" x2="9" y2="12"></line>
+                            </svg>
+                            <span th:text="#{message.home.logout}"/>
+                        </a>
+                    </li>
 
                 </ul>
             </div>
@@ -106,7 +125,7 @@
                         <td th:text="${adse.created}"/>
                         <td th:text="${adse.targetAgeMin}"/>
                         <td th:text="${adse.targetAgeMax}"/>
-                        <td th:text="${adse.targetCountry}"/>
+                        <td th:text="${adse.targetCountry.countryName}"/>
                         <td th:text="${adse.targetGender}"/>
 
                     </tr>
