--- a/src/main/resources/templates/post/postModal.html
+++ b/src/main/resources/templates/post/postModal.html
@@ -25,7 +25,7 @@
                 </div>
                 <div class="col-two">
                     <div class="">
-                        <img class="smallImg" th:src="@{user.profile.photo.path}"/>
+                        <img class="smallImg" th:src="@{${user.profile.photo.path}}"/>
                         <span th:text="${user.username}"></span>
                         <div class="date" th:text="${post.created}"></div>
                         <div th:text="${post.description}"></div>
