--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -40,6 +40,7 @@
 
             <div class="home-main-post-container" id="home-main-post-container">
                 <!-- ! do not remove ---------------------------------------------------->
+                <!-- ! do not remove ---------------------------------------------------->
                 <!--
                 <div class="home-main-post-container-item">
                     <div class="home-main-post-container-item-left">
